# ppx_static

./: .gitignore  .ocamlinit  CHANGES.md  README.md  dune  dune-project  dune-workspace.dev  jbuild  jbuild-workspace.dev  ppx_static.ml  ppx_static.opam  test_ppx_static.ml
