opam-version: "1.2"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedalt/ppx_static"
bug-reports: "https://github.com/paurkedalt/ppx_static/issues"
dev-repo: "https://github.com/paurkedalt/ppx_static.git"
license: "LGPL-3 with OCaml linking exception"
build: ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
depends: [
  "jbuilder" {build}
  "ocaml-migrate-parsetree"
]
available: [ocaml-version >= "4.02.3"]
