opam-version: "2.0"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedalt/ppx_static"
bug-reports: "https://github.com/paurkedalt/ppx_static/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.8" & build}
  "ppxlib"
]
build: ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
dev-repo: "git+https://github.com/paurkedalt/ppx_static.git"
